# pico

./: .flutter  .gitignore  LICENSE  PRIVACY.md  README.md  build-android.sh  build-ios.sh  flutter_rust_bridge.yaml  index.html  pubspec.yaml
android/: gradle_logs.out  gradle_logs2.out
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/app/pico/wallet/: MainActivity.kt
android/app/src/main/res/values-night-v31/: styles.xml
assets/: generate_icon.py  generate_qr_icons.py
ios/: Podfile  pico.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/drawers/: cancel_ecash_drawer.dart  confirm_currency_drawer.dart  confirm_lightning_send_drawer.dart  ecash_drawer.dart  expiration_drawer.dart  federation_picker_drawer.dart  generate_onchain_address_drawer.dart  invite_drawer.dart  invite_scanner_drawer.dart  leave_federation_drawer.dart  lightning_invoice_drawer.dart  lnurl_drawer.dart  onchain_address_drawer.dart  payment_details_drawer.dart  recovery_drawer.dart  scanner_drawer.dart
lib/screens/: base_screen.dart  confirm_lnurl_send_screen.dart  confirm_onchain_send_screen.dart  confirm_recovery_phrase_screen.dart  connection_status_screen.dart  contact_name_entry_screen.dart  display_contacts_screen.dart  display_ecash_screen.dart  display_invoice_screen.dart  display_lnurl_screen.dart  display_recovery_phrase_screen.dart  ecash_amount_screen.dart  federation_screen.dart  home_screen.dart  input_recovery_phrase_screen.dart  invoice_amount_screen.dart  landing_screen.dart  lightning_address_entry_screen.dart  lnurl_amount_screen.dart  onchain_address_screen.dart  onchain_amount_screen.dart  payment_history_screen.dart  select_currency_screen.dart  settings_screen.dart  transfer_amount_screen.dart  wallet_v2_receive_screen.dart
lib/utils/: async_button_mixin.dart  auth_utils.dart  currency_utils.dart  drawer_utils.dart  notification_utils.dart  payment_utils.dart  styles.dart
lib/widgets/: address_card_widget.dart  amount_display_widget.dart  amount_entry_widget.dart  amount_rows.dart  animated_balance_widget.dart  animated_entry_widget.dart  async_button_widget.dart  async_icon_button_widget.dart  bordered_list_widget.dart  detail_row_widget.dart  drawer_shell_widget.dart  federation_chip_widget.dart  fee_preview_widget.dart  grouped_list_widget.dart  loading_icon_widget.dart  onboarding_card_widget.dart  payment_card_widget.dart  primary_card_widget.dart  qr_code_widget.dart  qr_scanner_widget.dart  recent_payments_widget.dart  search_field_widget.dart  settings_card_widget.dart  shareable_data_widget.dart  shareable_row_widget.dart  text_entry_body_widget.dart  warning_card_widget.dart
rust/: Cargo.toml
rust/src/: client.rs  currency.rs  db.rs  events.rs  exchange.rs  factory.rs  fountain.rs  frb_generated.rs  lib.rs  lnurl.rs
